revert to master